# esp-idf

examples/mesh/internal_communication/: .gitignore  home.py  log.py
examples/mesh/internal_communication/main/: CMakeLists.txt  ZHNetwork.cpp  command.cpp  mesh_main.c  mesh_main.cpp  parameters.csv  uart_commander.cpp  zh.cpp
examples/mesh/internal_communication/main/include/: ZHNetwork.h  command.hpp  general.hpp  memory_pool.hpp  mesh_light.h  mutex.hpp  sender.hpp  uart_commander.hpp  zh.hpp
